# dummy

./: genindex.html  index.html  objects.inv  pyproject.toml  searchindex.js
.github/workflows/: publish_doc.yml  wf.yml
appref/: chatsky_ui.html
appref/chatsky_ui/: api.html  clients.html  core.html  db.html  schemas.html  services.html  tests.html
appref/chatsky_ui/api/: api_v1.html
appref/chatsky_ui/api/api_v1/: endpoints.html
appref/chatsky_ui/tests/: api.html  e2e.html  integration.html  services.html
