[tool.poetry]
name = "dummy"
version = "0.1.0"
description = ""
authors = ["Ramimashkouk <ramima1996@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sphinx = { version = "*", python = "^3.10"}
sphinx-rtd-theme = { version = "*", python = "^3.10"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
